build_error.log.txt
    Checking ai-gateway v0.1.0 (/Users/pirs/Documents/www/ai-gateway)
warning: unused import: `CrawlerError`
 --> src/crawler/fetcher.rs:6:20
  |
6 | use super::types::{CrawlerError, Result};
  |                    ^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `Article`
 --> src/crawler/parser.rs:1:54
  |
1 | use readabilityrs::{Readability, ReadabilityOptions, Article};
  |                                                      ^^^^^^^

warning: unused import: `url::Url`
 --> src/crawler/parser.rs:2:5
  |
2 | use url::Url;
  |     ^^^^^^^^

error[E0382]: borrow of moved value: `article.excerpt`
  --> src/crawler/parser.rs:59:32
   |
53 |             excerpt: article.excerpt,
   |                      --------------- value moved here
...
59 |                 "excerpt_len": article.excerpt.as_ref().map(String::len),
   |                                ^^^^^^^^^^^^^^^ value borrowed here after move
   |
   = note: move occurs because `article.excerpt` has type `std::option::Option<std::string::String>`, which does not implement the `Copy` trait

error[E0382]: borrow of moved value: `article.content`
    --> src/crawler/parser.rs:60:32
     |
  49 |             content_html: article.content.unwrap_or_default(),
     |                           --------------- ------------------- `article.content` moved due to this method call
     |                           |
     |                           help: consider calling `.as_ref()` or `.as_mut()` to borrow the type's contents
...
  60 |                 "content_len": article.content.as_ref().map(String::len),
     |                                ^^^^^^^^^^^^^^^ value borrowed here after move
     |
note: `std::option::Option::<T>::unwrap_or_default` takes ownership of the receiver `self`, which moves `article.content`
    --> /Users/pirs/.rustup/toolchains/stable-aarch64-apple-darwin/lib/rustlib/src/rust/library/core/src/option.rs:1092:36
     |
1092 |     pub const fn unwrap_or_default(self) -> T
     |                                    ^^^^
     = note: move occurs because `article.content` has type `std::option::Option<std::string::String>`, which does not implement the `Copy` trait
help: you can `clone` the value and consume it, but this might not be your desired behavior
     |
  49 |             content_html: article.content.clone().unwrap_or_default(),
     |                                          ++++++++

For more information about this error, try `rustc --explain E0382`.
warning: `ai-gateway` (lib) generated 3 warnings
error: could not compile `ai-gateway` (lib) due to 2 previous errors; 3 warnings emitted
